kubernetes/istio/virtual-service-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: "virtual-service-gateway"
spec:
  hosts:
  - "*"
  gateways:
  - "service-gateway"
  http:
  - match:
    - uri:
        exact: /service1
    route:
    - destination:
        host: "service1"
        port:
          number: 8080
